login & register routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
-
-<app-globe></app-globe>
+<app-hamburger-menu></app-hamburger-menu>
 <router-outlet></router-outlet>
-
-<!-- <router-outlet></router-outlet> -->
